# chem_utils

./: .gitignore  LICENSE  README.md  pyproject.toml
chem_utils/: __init__.py  allxyz_from_xyz.py  allxyz_to_xyz.py  check_and_copy_path.py  chem_render.py  constants.py  eldens.py  find_cycles.py  format_xyz.py  fragment.py  frequency.py  geometry_convergence_plot.py  get_image.py  get_orb.py  mirror_xyz.py  molecular_distance.py  molecule.py  motor.py  neb_plot.py  path.py  plot_scheme.py  plot_spectrum.py  pyvista_render_settings.csv  render_molecule.py  rotate_path.py  scalar_field.py  shake_molecule.py  spectrum.py  test.py  utils.py  valency.py  xyz_from_allxyz.py  xyz_to_allxyz.py
examples/: example.ipynb
tests/: C2H4.eldens.cube  C6H6.xyz  orca.out  test_molecule.py  test_orca.py
