[tool.poetry]
name = "chem-utils"
version = "0.1.1"
description = ""
authors = ["ivan <imtambovcev@gmail.com>"]
readme = "README.md"
packages = [{include = "chem_utils"}]

[tool.poetry.dependencies]
python = "^3.8"
ase = "^3.22.1"
matplotlib = "^3.7.1"
pyvista = "^0.38.5"
networkx = "^3.0"
pathlib = "^1.0.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
